src/templates/image-viewer/css/image-viewer.css
/* Base styles */
.fg-image-viewer {
	display: block;
	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}
.fg-image-viewer.fg-left {
	text-align: left;
}

.fg-image-viewer.fg-center {
	text-align: center;
}
.fg-image-viewer.fg-right {
	text-align: right;
}

.fiv-inner {
	position: relative;
	display: inline-block;
	max-width: 100%;
	overflow: hidden;
	z-index: 6;
}
.fiv-inner .fiv-inner-container {
	position: relative;
	overflow: hidden;
	max-width: 100%;
	border-style: solid;
	border-width: 0;
	border-bottom-width: 4px;
	z-index: 5;
}
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item .fg-thumb,
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item .fg-thumb:hover,
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item .fg-thumb:active,
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item .fg-thumb:visited {
	position: relative;
	display: block;
	border: none;
	outline: none;
	text-decoration: none;
	box-shadow: none;
	max-width: 100%;
}

.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item {
	position: absolute;
	visibility: visible;
	opacity: 1;
	border: none;
	outline: none;
	text-decoration: none;
	box-shadow: none;
	max-width: 100%;
}
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item:first-of-type {
	position: relative;
}
.fg-image-viewer .fiv-inner .fiv-inner-container .fg-item .fg-thumb img {
	display: block;
	max-width: 100%;
	height: auto;
	border: none;
	outline: none;
	text-decoration: none;
}

.fg-image-viewer .fiv-inner .fiv-ctrls {
	display: block;
	text-align: center;
	font-size: 14px;
	border-style: solid;
	line-height: 34px;
}
.fg-image-viewer .fiv-inner .fiv-ctrls:after {
	content: '';
	display: block;
	clear: both;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-count {
	display: inline-block;
	font-weight: normal;
	margin: 0;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev,
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next {
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	border: none;
	min-width: 80px;
	position: relative;
	overflow: hidden;
	transition: background-color .3s;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev:before,
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next:before {
	display: block;
	position: absolute;
	font-size: 24px;
	line-height: 30px;
	top:0;
	left:0;
	width: 100%;
	transform: translateY(0);
	transition: transform .3s;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev:hover:before,
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next:hover:before {
	transform: translateY(-100%);
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev span,
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next span {
	display: block;
	width: 100%;
	transform: translateY(100%);
	transition: transform .3s;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev:hover span,
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next:hover span {
	transform: translateY(0);
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev {
	float: left;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev:before {
	content: '\2190';
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next {
	float: right;
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next:before {
	content: '\2192';
}
.fg-image-viewer .fiv-inner .fiv-ctrls .fiv-count span {
	margin: 0 4px;
}
.rtl .fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev {
	float: right;
}
.rtl .fg-image-viewer .fiv-inner .fiv-ctrls .fiv-prev:before {
	content: '\2192';
}
.rtl .fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next {
	float: left;
}
.rtl .fg-image-viewer .fiv-inner .fiv-ctrls .fiv-next:before {
	content: '\2190';
}

/* Captions */

.foogallery.fg-image-viewer.fg-caption-always .fg-item-inner .fg-caption {
	border: none;
}

/* Theme - Default (Light) */
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls,
.fg-image-viewer.fg-light .fiv-inner .fiv-inner-container,
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls .fiv-count,
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls .fiv-prev,
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls .fiv-next {
	background-color: #FFF;
	color: #333;
	border-color: #FFF;
}
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls .fiv-prev:hover,
.fg-image-viewer.fg-light .fiv-inner .fiv-ctrls .fiv-next:hover {
	background-color: #F2F2F2;
}
.fg-image-viewer.fg-light .fiv-prev,
.fg-image-viewer.fg-light .fiv-next {
	box-shadow: inset 0 0 0 1px #ddd;
}

/* Theme - Dark */
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls,
.fg-image-viewer.fg-dark .fiv-inner .fiv-inner-container,
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls .fiv-count,
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls .fiv-prev,
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls .fiv-next {
	background-color: #333;
	color: #FFF;
	border-color: #333;
}
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls .fiv-prev:hover,
.fg-image-viewer.fg-dark .fiv-inner .fiv-ctrls .fiv-next:hover {
	background-color: #444;
}
.fg-image-viewer.fg-dark .fiv-prev,
.fg-image-viewer.fg-dark .fiv-next {
	box-shadow: inset 0 0 0 1px #222;
}

/* Border Size */
.foogallery.fg-image-viewer.fg-border-thin .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thick .fg-item-inner {
	border-width: 0;
}
.foogallery.fg-image-viewer .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-thin .fiv-inner-container {
	border-width: 4px;
}
.foogallery.fg-image-viewer.fg-border-medium .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-medium .fiv-inner-container {
	border-width: 10px;
}
.foogallery.fg-image-viewer.fg-border-thick .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-thick .fiv-inner-container {
	border-width: 16px;
}
.foogallery.fg-image-viewer .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-thin .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-medium .fiv-ctrls,
.foogallery.fg-image-viewer.fg-border-thick .fiv-ctrls {
	border-top-width: 1px;
}

/* Rounded Corners */
.foogallery.fg-image-viewer.fg-round-small .fg-item,
.foogallery.fg-image-viewer.fg-round-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-round-small .fiv-inner {
	border-radius: 5px;
}
.foogallery.fg-image-viewer.fg-round-small .fg-item,
.foogallery.fg-image-viewer.fg-round-small .fg-item-inner {
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}
.foogallery.fg-image-viewer.fg-round-small .fiv-prev,
.foogallery.fg-image-viewer.fg-round-small .fiv-next {
	border-radius: 3px;
}

.foogallery.fg-image-viewer.fg-border-thin.fg-round-small .fg-item,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-small .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-small .fiv-next,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-small .fg-item,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-small .fiv-prev,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-small .fiv-next,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-small .fg-item,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-small .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-small .fiv-next {
	border-radius: 3px;
}

.foogallery.fg-image-viewer.fg-round-medium .fg-item,
.foogallery.fg-image-viewer.fg-round-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-round-medium .fiv-inner {
	border-radius: 10px;
}
.foogallery.fg-image-viewer.fg-round-medium .fg-item,
.foogallery.fg-image-viewer.fg-round-medium .fg-item-inner {
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}
.foogallery.fg-image-viewer.fg-round-medium .fiv-prev,
.foogallery.fg-image-viewer.fg-round-medium .fiv-next {
	border-radius: 5px;
}
.foogallery.fg-image-viewer.fg-border-thin.fg-round-medium .fg-item,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-medium .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-medium .fiv-next {
	border-radius: 5px;
}
.foogallery.fg-image-viewer.fg-border-medium.fg-round-medium .fg-item,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-medium .fiv-prev,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-medium .fiv-next,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-medium .fg-item,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-medium .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-medium .fiv-next {
	border-radius: 3px;
}

.foogallery.fg-image-viewer.fg-round-large .fg-item,
.foogallery.fg-image-viewer.fg-round-large .fg-item-inner,
.foogallery.fg-image-viewer.fg-round-large .fiv-inner {
	border-radius: 15px;
}
.foogallery.fg-image-viewer.fg-round-large .fg-item,
.foogallery.fg-image-viewer.fg-round-large .fg-item-inner {
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}
.foogallery.fg-image-viewer.fg-round-large .fiv-prev,
.foogallery.fg-image-viewer.fg-round-large .fiv-next {
	border-radius: 11px;
}
.foogallery.fg-image-viewer.fg-border-thin.fg-round-large .fg-item,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-large .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-large .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thin.fg-round-large .fiv-next {
	border-radius: 11px;
}

.foogallery.fg-image-viewer.fg-border-medium.fg-round-large .fg-item,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-large .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-large .fiv-prev,
.foogallery.fg-image-viewer.fg-border-medium.fg-round-large .fiv-next {
	border-radius: 5px;
}

.foogallery.fg-image-viewer.fg-border-thick.fg-round-large .fg-item,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-large .fg-item-inner,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-large .fiv-prev,
.foogallery.fg-image-viewer.fg-border-thick.fg-round-large .fiv-next {
	border-radius: 3px;
}

.foogallery.fg-image-viewer.fg-round-full .fiv-inner,
.foogallery.fg-image-viewer.fg-round-full .fiv-prev,
.foogallery.fg-image-viewer.fg-round-full .fiv-next {
	border-radius: 50%;
}

/* Drop Shadows */
.foogallery.fg-image-viewer.fg-light.fg-shadow-outline .fg-item-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-outline .fg-item-inner,
.foogallery.fg-image-viewer.fg-light.fg-shadow-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-small .fg-item-inner,
.foogallery.fg-image-viewer.fg-light.fg-shadow-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-medium .fg-item-inner,
.foogallery.fg-image-viewer.fg-light.fg-shadow-large .fg-item-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-large .fg-item-inner {
	box-shadow: none;
}

.foogallery.fg-image-viewer.fg-light.fg-shadow-outline .fiv-inner {
	box-shadow: 0 0 0 1px #ddd;
}
.foogallery.fg-image-viewer.fg-dark.fg-shadow-outline .fiv-inner {
	box-shadow: 0 0 0 1px #222;
}
.foogallery.fg-image-viewer.fg-light.fg-shadow-small .fiv-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-small .fiv-inner {
	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.5);
}
.foogallery.fg-image-viewer.fg-light.fg-shadow-medium .fiv-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-medium .fiv-inner {
	box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.5);
}
.foogallery.fg-image-viewer.fg-light.fg-shadow-large .fiv-inner,
.foogallery.fg-image-viewer.fg-dark.fg-shadow-large .fiv-inner {
	box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.5);
}

